# CV-Wrapper

./: CMakeLists.txt  wrapper.1  wrapper.cpp
app/: CMakeLists.txt  app.cpp  cvstruct.hpp
lib/: CMakeLists.txt  freenect.cpp  freenect.hpp  opencv.hpp
