PROJECT(wrapper)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(libfreenect REQUIRED)
FIND_PACKAGE(libusb-1.0 REQUIRED)
FIND_LIBRARY(FREENECT_LIBS NAMES freenect libfreenect HINTS ${FREENECT_LIBRARY_DIRS})

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
ADD_EXECUTABLE(wrapper wrapper.cpp)
TARGET_LINK_LIBRARIES(wrapper LINK_PUBLIC capture app ${OpenCV_LIBS} ${FREENECT_LIBS})